# browser

./: .gitignore  README.md  package-lock.json  package.json  webpack.main.config.ts  webpack.renderer.config.ts
lib/: Cargo.toml
lib/src/: bulletproofs.rs  lib.rs  params.rs  passwords.rs  utils.rs  wallet.rs
src/: index.html  index.ts  preload.ts  renderer.ts
src/renderer/: App.tsx  dotakon.d.ts
