[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
ff = "0.13.1"
getrandom = { version = "0.2.16", features = ["js"] }
pasta_curves = "0.5.1"
primitive-types = "0.13.1"
sha3 = "0.10.8"
wasm-bindgen = "0.2.101"
